# VK_DESKTOP

./: README.md
build-client_cmake-Desktop_Qt_6_4_2_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  forIco.rc  qtcsettings.cmake
build-client_cmake-Desktop_Qt_6_4_2_MinGW_64_bit-Release/.cmake/api/v1/reply/: cache-v2-02e6db310533911bf7b3.json  cmakeFiles-v1-f607c3b01a6d61bbbcb3.json  codemodel-v2-cc71607331e0c19718ec.json  directory-.-Release-2d7c3db94ed41dd171df.json  index-2023-05-10T20-14-56-0041.json  target-client_cmake-Release-6611083c6a72fe525d79.json  target-client_cmake_autogen-Release-f93deeec72dab5c145e4.json  target-client_cmake_autogen_timestamp_deps-Release-1c79731b2c33ff1cc934.json
build-client_cmake-Desktop_Qt_6_4_2_MinGW_64_bit-Release/.qt/: QtDeploySupport.cmake
build-client_cmake-Desktop_Qt_6_4_2_MinGW_64_bit-Release/client_cmake_autogen/: deps  mocs_compilation.cpp
build-client_cmake-Desktop_Qt_6_4_2_MinGW_64_bit-Release/client_cmake_autogen/EWIEGA46WW/: moc_chatroom.cpp  moc_chatroom.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-client_cmake-Desktop_Qt_6_4_2_MinGW_64_bit-Release/client_cmake_autogen/include/: ui_chatroom.h  ui_mainwindow.h
build-server_cmake-Desktop_Qt_6_4_2_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  DB.db  build.ninja  cmake_install.cmake
build-server_cmake-Desktop_Qt_6_4_2_MinGW_64_bit-Release/.cmake/api/v1/reply/: cache-v2-20910d8c6997a492ad5d.json  cmakeFiles-v1-bd7334ef40bd9b4b58d9.json  codemodel-v2-9eb847c7a207280907bd.json  index-2023-05-10T20-15-06-0016.json  (+4 more)
build-server_cmake-Desktop_Qt_6_4_2_MinGW_64_bit-Release/.qt/: QtDeploySupport.cmake
build-server_cmake-Desktop_Qt_6_4_2_MinGW_64_bit-Release/server_cmake_autogen/: deps
build-server_cmake-Desktop_Qt_6_4_2_MinGW_64_bit-Release/server_cmake_autogen/EWIEGA46WW/: moc_server.cpp  moc_server.cpp.d
client_cmake/: CMakeLists.txt  chatroom.cpp  chatroom.h  chatroom.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
server_cmake/: CMakeLists.txt  server.cpp  server.h
